--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5100",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "apexcharts": "^3.26.2",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.1",
     "sass": "^1.32.5"
   }
