--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.26.2",
+    "nanoid": "^3.1.23",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.9",
